fix header on mobile

--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -55,4 +55,18 @@
       }
     }
   }
+  @media screen and (max-width: 540px) {
+    .container {
+      .row {
+        .toggle {
+          span{
+            display: none;
+          }
+          svg{
+            margin: 0;
+          }
+        }
+      }
+    }
+  }
 }
